--- a/dev/sass/_contact.sass
+++ b/dev/sass/_contact.sass
@@ -7,12 +7,11 @@
   margin: 0 0 20px 0
 
 .contact_innerWrap
-  display: flex
-  flex-wrap: wrap
   section
     margin: 15px auto
 
 .contact_form-input-wrap
+  margin: auto
   max-width: 550px
   display: flex
   flex-wrap: wrap
@@ -27,13 +26,14 @@
   textarea
     width: 100%
     margin-bottom: 10px
-
+//
 .contact_form-sendBtn
   margin: auto
   width: 150px
   height: 35px
 
 .contact_social
+  margin: auto
   display: flex
   flex-wrap: wrap
   justify-content: center
